# SyncMCP

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  README.md  SETUP.md  pyproject.toml  setup.bat  setup.sh
.context/: arch.md  errors.md  file_map.md  theme.md
context/: active_task.md  arch.md  errors.md  file_map.md  theme.md
hooks/: post-commit  post-commit.py
src/syncmcp/: __init__.py  agents_md.py  cli.py  error_index.py  file_mapper.py  global_store.py  hub.py  project_store.py  scanner.py  server.py  session.py  sync.py
