[project]
name = "syncmcp"
version = "0.1.1"
description = "Two-scope agent memory system with MCP server — gives every AI agent persistent, shared memory"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "click>=8.0",
    "google-generativeai>=0.3",
    "python-dotenv>=1.0",
    "requests>=2.31",
]

[project.scripts]
ctx = "syncmcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/syncmcp"]
